src/objects/inscor__Stock_Check_Line__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Action_Requested__c</fullName>
        <description>Action Requested</description>
        <label>Action Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Check</fullName>
                </value>
                <value>
                    <fullName>Tag Info</fullName>
                </value>
                <value>
                    <fullName>Paperwork</fullName>
                </value>
                <value>
                    <fullName>Pictures</fullName>
                </value>
                <value>
                    <fullName>Cure/Exp Date</fullName>
                </value>
                <value>
                    <fullName>Time and Cycles</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Finding_Comment__c</fullName>
        <description>Finding Comment</description>
        <label>Finding Comment</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Line</description>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipName>Stock_Check_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Stock_Check__c</fullName>
        <description>Stock Check</description>
        <label>Stock Check</label>
        <referenceTo>inscor__Stock_Check__c</referenceTo>
        <relationshipName>Stock_Check_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock Check Line</label>
    <nameField>
        <displayFormat>SCLID-{0}</displayFormat>
        <label>Stock Check Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Check Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>